@@ -1,5 +1,10 @@
 2008-05-06  Jonh Wendell <jwendell@gnome.org>
 
+	* src/vinagre-connection.c: Support for host::port, patch from
+	Henrik Holst, closes #501165.
+
+2008-05-06  Jonh Wendell <jwendell@gnome.org>
+
 	* configure.ac: requires gtk-vnc 0.3.6
 
 2008-05-05  Jonh Wendell <jwendell@gnome.org>
